Corrected alignment of side nav menu and created div to organize links to avoid any conflicts within side nav.

--- a/chucks-pick3-web/assets/css/global-style-sheet.css
+++ b/chucks-pick3-web/assets/css/global-style-sheet.css
@@ -141,7 +141,3 @@ h1 {
     text-align: center;
 
 }
-
-.body-container {
-    z-index: 1;
-}
